# Hardware-Monitor

./: CMakeLists.txt  README.md  gui.glade
src/: cpuinfo.h  gui.c  gui.h  main.c  main.h  procParser.c  procParser.h  utils.h
